CostalCloud/force-app/main/default/objects/Electrical__c.object
<CustomObject>
    <label>Electrical</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Electrical Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Electrical</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>