CostalCloud/force-app/main/default/objects/Electrical__c/fields/Edge_to_LHS__c.field-meta.xml
<CustomField>
    <fullName>Edge_to_LHS__c</fullName>
    <label>Edge to LHS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>