CostalCloud/force-app/main/default/objects/Electrical__c/fields/Edge_to_LHS_Fraction__c.field-meta.xml
<CustomField>
    <fullName>Edge_to_LHS_Fraction__c</fullName>
    <label>Edge to LHS Fraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fraction_values</valueSetName>
    </valueSet>
</CustomField>