CostalCloud/force-app/main/default/objects/Electrical__c/fields/Electrical_Measurement_Image__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Measurement_Image__c</fullName>
    <label>Electrical Measurement Image</label>
    <type>TextArea</type>
</CustomField>