CostalCloud/force-app/main/default/objects/Electrical__c/fields/Electrical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Notes__c</fullName>
    <label>Electrical Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>