CostalCloud/force-app/main/default/objects/Electrical__c/fields/Electrical_Photo__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Photo__c</fullName>
    <label>Electrical Photo</label>
    <type>TextArea</type>
</CustomField>