CostalCloud/force-app/main/default/objects/Electrical__c/fields/Electrical_Type__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Type__c</fullName>
    <label>Electrical Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outlet</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>GFI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>