CostalCloud/force-app/main/default/objects/Electrical__c/fields/H_Off_Floor__c.field-meta.xml
<CustomField>
    <fullName>H_Off_Floor__c</fullName>
    <label>H Off Floor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>