CostalCloud/force-app/main/default/objects/Electrical__c/fields/Voltage__c.field-meta.xml
<CustomField>
    <fullName>Voltage__c</fullName>
    <label>Voltage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>110V</fullName>
            </value>
            <value>
                <fullName>120V</fullName>
            </value>
            <value>
                <fullName>220V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>