CostalCloud/force-app/main/default/objects/Electrical__c/fields/Wall__c.field-meta.xml
<CustomField>
    <fullName>Wall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wall</label>
    <referenceTo>Walls__c</referenceTo>
    <relationshipLabel>Electrical</relationshipLabel>
    <relationshipName>Electrical</relationshipName>
    <type>Lookup</type>
</CustomField>