CostalCloud/force-app/main/default/objects/Electrical__c/fields/Width_of_Box__c.field-meta.xml
<CustomField>
    <fullName>Width_of_Box__c</fullName>
    <label>Width of Box</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>