CostalCloud/force-app/main/default/objects/Electrical__c/fields/Width_of_Box_Fraction__c.field-meta.xml
<CustomField>
    <fullName>Width_of_Box_Fraction__c</fullName>
    <label>Width of Box Fraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fraction_values</valueSetName>
    </valueSet>
</CustomField>